--- a/src/RandomThoughts/Views/Thoughts/Index.cshtml
+++ b/src/RandomThoughts/Views/Thoughts/Index.cshtml
@@ -9,16 +9,31 @@
     var thoughts = Model as IEnumerable<ThoughtIndexViewModel>;
 }
 
+@await Html.PartialAsync("_ThoughtModal")
 
-
-<h2>Thoughts</h2>
+<div class="row">
+    <h2 class="pull-left">Thoughts</h2>
+    <button id="add-new-thought" type="button" class="btn btn-success pull-right">Create Thought</button>
+</div>
+<div class="hs-100">
+    </div>
 <div class="row">
 
     @foreach (var thought in thoughts)
     {
         <div class="thought-inner-container col-sm-3">
             <div class="panel panel-default">
-                <div class="panel-heading">@thought.Title</div>
+                <div class="panel-heading">
+                    @thought.Title
+                    <span class="thought-action-container pull-right">     
+                        <button>                   
+                            <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+                        </button>
+                        <button>  
+                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                        </button>
+                    </span>
+                </div>
                 <div class="panel-body">
                 @thought.Body
                 </div>
