--- a/src/RandomThoughts/wwwroot/css/site.css
+++ b/src/RandomThoughts/wwwroot/css/site.css
@@ -33,3 +33,18 @@
         display: none;
     }
 }
+
+#add-new-thought{
+    margin-top: 20px;
+}
+
+.hs-50{
+    margin-top: 50px;;
+}
+.hs-100{
+    margin-top: 100px;
+}
+.thought-action-container > button{
+    border: none;
+    background-color: transparent;
+}
