--- a/src/RandomThoughts/Views/Thoughts/Index.cshtml
+++ b/src/RandomThoughts/Views/Thoughts/Index.cshtml
@@ -8,7 +8,6 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
     var thoughts = Model as IEnumerable<ThoughtIndexViewModel>;
 }
-
 @await Html.PartialAsync("_ThoughtModal")
 
 <div class="row">
@@ -21,15 +20,15 @@
 
     @foreach (var thought in thoughts)
     {
-        <div class="thought-inner-container col-sm-3">
+        <div data-id="@(thought.Id)" class="thought-inner-container col-sm-3">
             <div class="panel panel-default">
                 <div class="panel-heading">
                     @thought.Title
                     <span class="thought-action-container pull-right">     
-                        <button>                   
+                        <button class="thought-view-btn">                   
                             <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
                         </button>
-                        <button>  
+                        <button class="thought-edit-btn">  
                             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                         </button>
                     </span>
