--- a/src/RandomThoughts/Views/Shared/_ThoughtModal.cshtml
+++ b/src/RandomThoughts/Views/Shared/_ThoughtModal.cshtml
@@ -1,3 +1,4 @@
+
 <div id="thought-display-modal" class="modal fade" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -10,7 +11,32 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
+
+<div id="thought-edit-modal" class="modal fade" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Create a random Thought!!!</h4>
+      </div>
+      <div class="modal-body">
+        <div class="form-group">
+            <label for="thought-title">Title</label>
+            <input type="text" class="form-control" id="thought-title" name="Title">
+        </div>
+        <div class="form-group">
+            <label for="thought-body">Title</label>
+            <input type="text" class="form-control" id="thought-body" name="Body">
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button id="save-thought-btn" type="button" class="btn btn-success" data-dismiss="modal">Save</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
