Edits the Thought via Ajax

--- a/src/RandomThoughts/Views/Shared/_ThoughtModal.cshtml
+++ b/src/RandomThoughts/Views/Shared/_ThoughtModal.cshtml
@@ -16,7 +16,7 @@
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
-
+<!-- TODO: Add the mood selector element -->
 <div id="thought-edit-modal" class="modal fade" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -30,7 +30,7 @@
             <input type="text" class="form-control" id="thought-title" name="Title">
         </div>
         <div class="form-group">
-            <label for="thought-body">Title</label>
+            <label for="thought-body">Your Thought</label>
             <input type="text" class="form-control" id="thought-body" name="Body">
         </div>
       </div>
