--- a/src/RandomThoughts/Views/Thoughts/Index.cshtml
+++ b/src/RandomThoughts/Views/Thoughts/Index.cshtml
@@ -23,7 +23,7 @@
         <div data-id="@(thought.Id)" class="thought-inner-container col-sm-3">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    @thought.Title
+                   <span class="thought-title"> @thought.Title</span>
                     <span class="thought-action-container pull-right">     
                         <button class="thought-view-btn">                   
                             <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
@@ -34,9 +34,11 @@
                     </span>
                 </div>
                 <div class="panel-body">
-                @thought.Body
+                <span class="thought-body">@thought.Body</span>
                 </div>
             </div>
         </div>
     }
 </div>
+
+
