--- a/src/RandomThoughts/Views/Shared/_ThoughtModal.cshtml
+++ b/src/RandomThoughts/Views/Shared/_ThoughtModal.cshtml
@@ -31,11 +31,11 @@
         </div>
         <div class="form-group">
             <label for="thought-body">Your Thought</label>
-            <input type="text" class="form-control" id="thought-body" name="Body">
+            <textarea rows="5" type="text" class="form-control" id="thought-body" name="Body"></textarea>
         </div>
       </div>
       <div class="modal-footer">
-        <button id="save-thought-btn" type="button" class="btn btn-success" data-dismiss="modal">Save</button>
+        <button id="save-thought-btn" type="button" class="btn btn-success">Save</button>
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
       </div>
     </div><!-- /.modal-content -->
