Inserts the new Thought in the DOM after its creation

--- a/src/RandomThoughts/Views/Thoughts/Index.cshtml
+++ b/src/RandomThoughts/Views/Thoughts/Index.cshtml
@@ -16,7 +16,7 @@
 </div>
 <div class="hs-100">
     </div>
-<div class="row">
+<div class="row" id="thoughts-container">
 
     @foreach (var thought in thoughts)
     {
