Edits the mood data after the edition with the server

--- a/src/RandomThoughts/Views/Shared/_ThoughtModal.cshtml
+++ b/src/RandomThoughts/Views/Shared/_ThoughtModal.cshtml
@@ -29,6 +29,7 @@
 <div id="thought-edit-modal" class="modal fade" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
+      <input type="text" style="display: none;" name="Id" id="thought-id" value="">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title">Create a random Thought!!!</h4>
@@ -44,7 +45,7 @@
           </div>
           <div class="form-group">
               <label for="thought-body">Mood</label> 
-              <select name="Mood">
+              <select name="Mood" id="thought-mood">
                   @foreach (var mood in moods)
                   {
                       <option value="@mood.Key">@mood.Value</option>
