--- a/src/RandomThoughts/Views/ThoughtHoles/Index.cshtml
+++ b/src/RandomThoughts/Views/ThoughtHoles/Index.cshtml
@@ -1,8 +1,42 @@
-﻿
+﻿@using RandomThoughts.Domain
+@using RandomThoughts.Models.ThoughtHoleViewModels
+
 @{
-   
+
     Layout = "~/Views/Shared/_Layout.cshtml";
+    var thoughtHoles = Model as IEnumerable<ThoughtHoleIndexViewModel>;
 }
 
-<h2>Index</h2>
+@await Html.PartialAsync("_ThoughtHoleModals")
 
+
+<div class="row">
+    <h2 class="pull-left">@ViewData["Title"]</h2>
+    <button id="add-new-thoughtHole" type="button" class="btn btn-success pull-right">Create New Hole</button>
+</div>
+<div class="hs-100">
+    </div>
+<div class="row" id="thoughtHoles-container">
+
+    @foreach (var thoughtHole in thoughtHoles)
+    {
+        <div data-likes="@thoughtHole.Likes" data-views="@thoughtHole.Views" data-amountOfThoughts="@(thoughtHole.AmountOfThought)" data-id="@(thoughtHole.Id)" class="thoughtHole-inner-container col-sm-3">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                   <span class="thought-title"> @thoughtHole.Name</span>
+                    <span class="thought-action-container pull-right">     
+                        <button class="thought-view-btn">                   
+                            <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+                        </button>
+                        <button class="thought-edit-btn">  
+                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                        </button>
+                    </span>
+                </div>
+                <div class="panel-body">
+                <span class="thought-body">@thoughtHole.Description</span>
+                </div>
+            </div>
+        </div>
+    }
+</div>
