--- a/src/RandomThoughts/Views/Thoughts/Index.cshtml
+++ b/src/RandomThoughts/Views/Thoughts/Index.cshtml
@@ -11,7 +11,7 @@
 @await Html.PartialAsync("_ThoughtModal")
 
 <div class="row">
-    <h2 class="pull-left">Thoughts</h2>
+    <h2 class="pull-left">@ViewData["Title"]</h2>
     <button id="add-new-thought" type="button" class="btn btn-success pull-right">Create Thought</button>
 </div>
 <div class="hs-100">
