--- a/src/RandomThoughts/Views/ThoughtHoles/Index.cshtml
+++ b/src/RandomThoughts/Views/ThoughtHoles/Index.cshtml
@@ -26,10 +26,10 @@
                 <div class="panel-heading">
                    <span class="thought-title"> <a href="@Url.Action("HoleThoughts", new {holeId = thoughtHole.Id})">@thoughtHole.Name</a> </span>
                     <span class="thought-action-container pull-right">     
-                        <button class="thought-view-btn">                   
+                        <button class="thoughtHole-view-btn">                   
                             <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
                         </button>
-                        <button class="thought-edit-btn">  
+                        <button class="thoughtHole-edit-btn">  
                             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                         </button>
                     </span>
