--- a/src/RandomThoughts/Views/Shared/_ThoughtModal.cshtml
+++ b/src/RandomThoughts/Views/Shared/_ThoughtModal.cshtml
@@ -22,6 +22,21 @@
       <div class="modal-body">
         <p>One fine body&hellip;</p>
       </div>
+      <h1>Comments</h1>
+      <div id="comment-details" class="modalCommentTitle">
+        <h5>User Name</h5>
+        <span class="thought-action-container pull-right">
+            <button class="comment-view-btn">
+                <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+            </button>
+            <button class="comment-edit-btn">
+                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+            </button>
+        </span>
+       </div>
+        <div class="modalComment-body">
+            <p>One fine body&hellip;</p>
+        </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
       </div>
@@ -68,3 +83,4 @@
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
+
