--- a/src/RandomThoughts/Views/Shared/_ThoughtModal.cshtml
+++ b/src/RandomThoughts/Views/Shared/_ThoughtModal.cshtml
@@ -37,9 +37,9 @@
         <div class="modalComment-body">
             <p>One fine body&hellip;</p>
         </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      </div>
+        <div id="thought-inner-container" class="modal-footer">
+            <button id="add-new-comment" type="button" class="btn btn-success pull-right">Create Comment</button>
+        </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
