fix bug, in select element id="thought-visibility"

--- a/src/RandomThoughts/Views/Shared/_ThoughtHoleModals.cshtml
+++ b/src/RandomThoughts/Views/Shared/_ThoughtHoleModals.cshtml
@@ -44,7 +44,7 @@
                 </div>
                 <div class="form-group">
                     <label for="thought-body">Visibility</label>
-                    <select name="Visibility" id="thought-mood" class="form-control">
+                    <select name="Visibility" id="thought-visibility" class="form-control">
                         @foreach (var item in visibility)
                         {
                             <option value="@item.Key">@item.Value</option>
