--- a/src/RandomThoughts/Views/Shared/_ThoughtHoleModals.cshtml
+++ b/src/RandomThoughts/Views/Shared/_ThoughtHoleModals.cshtml
@@ -39,8 +39,8 @@
                     <input type="text" class="form-control" id="thoughtHole-name" name="Name">
                 </div>
                 <div class="form-group">
-                    <label for="thoughtHole-Description">Hole Description</label>
-                    <textarea rows="5" type="text" class="form-control" id="thoughtHole-Description" name="Description"></textarea>
+                    <label for="thoughtHole-description">Hole Description</label>
+                    <textarea rows="5" type="text" class="form-control" id="thoughtHole-description" name="Description"></textarea>
                 </div>
                 <div class="form-group">
                     <label for="thought-body">Visibility</label>
