--- a/src/RandomThoughts/Views/ThoughtHoles/Index.cshtml
+++ b/src/RandomThoughts/Views/ThoughtHoles/Index.cshtml
@@ -21,10 +21,10 @@
 
     @foreach (var thoughtHole in thoughtHoles)
     {
-        <div data-likes="@thoughtHole.Likes" data-visibility="@thoughtHole.Visibility" data-views="@thoughtHole.Views" data-amountOfThoughts="@(thoughtHole.AmountOfThought)" data-id="@(thoughtHole.Id)" class="thoughtHole-inner-container col-sm-3">
+        <div data-likes="@thoughtHole.Likes" data-visibility="@((int)thoughtHole.Visibility)" data-views="@thoughtHole.Views" data-amountOfThoughts="@(thoughtHole.AmountOfThought)" data-id="@(thoughtHole.Id)" class="thoughtHole-inner-container col-sm-3">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                   <span class="thought-title"> <a href="@Url.Action("HoleThoughts", new {holeId = thoughtHole.Id})">@thoughtHole.Name</a> </span>
+                   <span class="thoughtHole-name"> <a href="@Url.Action("HoleThoughts", new {holeId = thoughtHole.Id})">@thoughtHole.Name</a> </span>
                     <span class="thought-action-container pull-right">     
                         <button class="thoughtHole-view-btn">                   
                             <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
@@ -35,7 +35,7 @@
                     </span>
                 </div>
                 <div class="panel-body">
-                <span class="thought-body">@thoughtHole.Description</span>
+                <span class="thoughtHole-description">@thoughtHole.Description</span>
                 </div>
             </div>
         </div>
