--- a/src/RandomThoughts/Views/ThoughtHoles/Index.cshtml
+++ b/src/RandomThoughts/Views/ThoughtHoles/Index.cshtml
@@ -24,8 +24,8 @@
         <div data-likes="@thoughtHole.Likes" data-visibility="@((int)thoughtHole.Visibility)" data-views="@thoughtHole.Views" data-amountOfThoughts="@(thoughtHole.AmountOfThought)" data-id="@(thoughtHole.Id)" class="thoughtHole-inner-container col-sm-3">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                   <span class="thoughtHole-name"> <a href="@Url.Action("HoleThoughts", new {holeId = thoughtHole.Id})">@thoughtHole.Name</a> </span>
-                    <span class="thought-action-container pull-right">     
+                   <span class="thoughtHole-name" data-name="@thoughtHole.Name"> <a href="@Url.Action("HoleThoughts", new {holeId = thoughtHole.Id})">@(thoughtHole.Name + $" ({thoughtHole.AmountOfThought})")</a> </span>
+                    <span class="thoughtHole-action-container pull-right">     
                         <button class="thoughtHole-view-btn">                   
                             <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
                         </button>
