Add the authentication prop

--- a/src/RandomThoughts/RTClientApp/src/app/app.component.html
+++ b/src/RandomThoughts/RTClientApp/src/app/app.component.html
@@ -26,4 +26,6 @@
 
 </div>
 
-<div *ngIf="!authentication"><app-login></app-login></div>
+<div *ngIf="!authentication">
+  <app-login></app-login>
+</div>
